# lrc-generator

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  TODO.md  lrc-generator.cpp  lrc-generator.h  main.cpp  meson.build
headers/: line.h  lrc-generator.h  lrc-interface.hpp  meson.build  spsc.hpp
src/: line.cpp  lrc-generator.cpp  lrc-generator.h  lrc-interface.cpp  main.cpp  meson.build
subprojects/: emilk-loguru.wrap
